Fix syntax collapsing on itself

--- a/src/modules/main/chat/_chatbox.scss
+++ b/src/modules/main/chat/_chatbox.scss
@@ -67,6 +67,10 @@
         }
     }
 
+    // NOTE: 2021-11-21 - This fixes an issue where syntax will 'collapse' on itself due to the Segoe Variable font
+    .codeBlockSyntax-2i-tMA{
+        font-family: Consolas, monospace;
+    }
 
     // Gift/GIF/Sticker/Emoji buttons
     .buttons-3JBrkn{
